--- a/imports/ui/layouts/body/body.html
+++ b/imports/ui/layouts/body/body.html
@@ -4,6 +4,7 @@
     <a href='/requests'>requests /</a>
     <a href='/friends'>friends /</a>
     <a href='/findFriend'>find friend /</a>
+    <a href='/userInfo'>your info /</a>
     {{> loginButtons}}
 </nav>
   {{> Template.dynamic template=main}}
