--- a/imports/ui/layouts/body/body.html
+++ b/imports/ui/layouts/body/body.html
@@ -1,8 +1,7 @@
 <template name="App_body">
 <nav>
     <a href='/dashboard'>dashboard /</a>
-    <a href='/requests'>requests /</a>
-    <a href='/friends'>friends /</a>
+    <a href='/requests'>requests and friends/</a>
     <a href='/findFriend'>find friend /</a>
     <a href='/userInfo'>your info /</a>
     {{> loginButtons}}
