--- a/imports/ui/components/friends/friends.html
+++ b/imports/ui/components/friends/friends.html
@@ -44,7 +44,7 @@
         {{/with}}
         
 <select class='selectTypeJs' value="{{type}}">
-    {{#each val in friendTypes}}a
+    {{#each val in friendTypes}}
     <option {{selectedType val}} value="{{val}}">{{val}}</option>
     {{/each}}
 </select>
