--- a/imports/ui/layouts/body/body.html
+++ b/imports/ui/layouts/body/body.html
@@ -4,7 +4,10 @@
     <a href='/requests'>requests and friends/</a>
     <a href='/findFriend'>find friend /</a>
     <a href='/userInfo'>your info /</a>
-    <a href='/yourWall'>your wall</a>
+    <a href='/yourWall'>your wall /</a>
+    <a href='/createEvent'>create Event /</a>
+    <a href='/browseEvents'>browse Events /</a>
+    <a href='/upsertCategory'>upsert Category /</a>
     {{> loginButtons}}
 </nav>
   {{> Template.dynamic template=main}}
