--- a/imports/ui/components/imageShow/imageShow.html
+++ b/imports/ui/components/imageShow/imageShow.html
@@ -1,5 +1,5 @@
 <template name="imageShow">
   {{#with images}}
-    <img src="{{link}}" alt="{{name}}" />
+    <img src="{{link}}" class="{{class}}" alt="{{name}}" />
   {{/with}}
 </template>
